<resources>
    <string name="app_name">SofivaMassage</string>
    <string name="btn_main_head_">Увійти</string>
    <string name="btn_register_head">Зареєструватися</string>
    <string name="EditText_register_name">Ваше Імя*</string>
    <string name="EditText_register_surname">Ваше Прізвище*</string>
    <string name="EditText_registr_email">Ваш Email*</string>
    <string name="EditText_register_password">Ваш пароль*</string>
    <string name="EditText_register_return_password">Ваш повторно пароль*</string>
    <string name="EditText_register_phone">Ваш номер телефона*</string>
    <string name="EditText_register_date">Ваша дата народженя</string>
    <string name="EdiText_login_email">Ваш Email</string>
    <string name="EditText_login_password">Ваш пароль</string>
    <string name="TextView_loading">Завантаження</string>
    <string name="TextView_name">Завантаження</string>
    <string name="TextView_surname">Завантаження</string>
    <string name="TextView_email">Завантаження</string>
    <string name="TextView_dob">Завантаження</string>
    <string name="TextView_phone">Завантаження</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_drawer_open">Ящик Відкрито</string>
    <string name="menu_drawer_close">Ящик Закрито</string>
</resources>